# openresearch

./: .gitignore  CONTRIBUTING.md  README.md  config.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml
agents/: api_utils.py  codegen_agent.py  data_prep_agent.py  dataset_diagnostics.py  eda_agent.py  error_memory.py  evaluator_agent.py  executor_agent.py  method_formulator.py  paper_writer.py  problem_analyst.py
examples/heart_disease/: README.md  config.yaml
examples/heart_disease/expected_output/: comparison.html  data_report.html
knowledge_base/: ml_methods.json
memory/: __init__.py  data_prep_memory.py  experiment_memory.py
orchestrator/: graph.py  state.py
schemas/: __init__.py  data_health.py  data_prep.py  dataset_diagnostics.py  execution_result.py  methods_catalog.py  problem_spec.py
templates/notebooks/: classification.ipynb.j2  clustering.ipynb.j2  computer_vision.ipynb.j2  nlp.ipynb.j2  regression.ipynb.j2  time_series.ipynb.j2
tests/: conftest.py  test_autoresearch.py
tools/: data_sources.py  kaggle_client.py  report_generator.py
