[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoresearch"
version = "0.1.0"
description = "Autonomous ML Research Agent — research for everyone"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

dependencies = [
    # LLM
    "anthropic>=0.25.0",
    # Orchestration
    "langgraph>=0.1.0",
    "redis>=5.0.0",
    # Data validation
    "pydantic>=2.0.0",
    # Data & ML
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "optuna>=3.0.0",
    "ydata-profiling>=4.6.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    # Kaggle
    "kaggle>=1.6.0",
    # Notebook generation
    "nbformat>=5.9.0",
    "jinja2>=3.1.0",
    # Code quality
    "ruff>=0.1.0",
    # Paper generation
    "python-docx>=1.1.0",
    # Vector store (local, no server needed)
    "chromadb>=0.4.0",
    # Logging
    "structlog>=23.0.0",
    # Retry logic
    "tenacity>=8.2.0",
    # CLI
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

# yaml for config loading (lightweight, not in core to keep install fast)
yaml = ["pyyaml>=6.0"]

[project.scripts]
autoresearch = "autoresearch.main:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = [".."]
include = ["autoresearch*"]

[tool.setuptools.package-dir]
"" = ".."
